# sky-meter

./: .extSettings  Makefile  Makefile.stm32g431  Makefile.stm32g473  README.md  def.h  sky-meter.ino  sky-meter.ioc  sky-meter.stm32g431cbu.ioc  sky-meter.stm32g473ceu.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32g4xx_it.c
USB_Device/App/: usb_device.c
box/: sky-meter-down-w.stl  sky-meter-down.stl  sky-meter-h-down.stl  sky-meter-h-up.stl  sky-meter-up-w.stl  sky-meter-up.stl  sky-meter-w-down.stl  sky-meter-w-up.stl  sky-meter.FCStd
cube/: Makefile.stm32f411  Makefile.stm32g431  Makefile.stm32g473  sky-meter.stm32f411ceu.ioc  sky-meter.stm32g473ceu.ioc
cube/source/: def.h
doc/: code.md  download.md
hw/: fp-lib-table  sky-meter.kicad_pcb  sky-meter.kicad_pro  sky-meter.kicad_sch  sky-meter.v2.0.txt  sky-meter.v2.1.txt
hw/v1.0/: sky-meter.kicad_pcb  sky-meter.kicad_pro  sky-meter.kicad_sch  sym-lib-table
hw/v2.0/: sky-meter.kicad_pcb  sky-meter.kicad_pro  sky-meter.kicad_sch
hw/v2.1/: sky-meter.kicad_pcb  sky-meter.kicad_pro  sky-meter.kicad_sch
skybook/: pubspec.yaml
skybook/lib/: device.dart  main.dart
skybook/src/: CMakeLists.txt  altcalc.cpp  jump.cpp  jump.h  windows.txt
src/jump/: altcalc.cpp  altcalc.h  bmp280.cpp  bmp280.h  logbook.cpp  logbook.h  proc.cpp  proc.h  wrk.cpp  wrk.h
src/sdcard/: fshnd.cpp  fshnd.h  saver.cpp  stm32mmc.c
src/sys/: batt.cpp  batt.h  cks.h  clock.cpp  clock.h  iflash.cpp  iflash.h  init.cpp  init.h  log.c  log.h  maincfg.cpp  maincfg.h  power.cpp  power.h  stm32drv.h  trwire.cpp  trwire.h  worker.cpp  (+1 more)
(+102 files in other folders)
